# chunkIQ

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  coverage.yml  test.yml
src/: main.rs
src/chunker/: chunker.rs  dynamicChunker.rs  fileChunker.rs  mod.rs  rabinChunker.rs  staticChunker.rs
src/parse/: parser.rs
src/trace/: hashers.rs  mod.rs  tracer.rs
src/tui/: tui.rs
src/util/: arguments.rs  fileIO.rs  mod.rs
