[package]
name = "chunkIQ"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
crossbeam = { version = "0.8.4" }
dashmap = "6.1.0"
digest = "0.10.7"
md-5 = "0.10.6"
memmap2 = "0.9.5"
sha1 = "0.10.6"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.20.0"
hex = "0.4.3"
