[package]
name = "chunkIQ"
version = "0.1.3"
edition = "2024"

[dependencies]
blake3 = "1"
clap = { version = "4.5.35", features = ["derive"] }
crossbeam = { version = "0.8.4" }
crossbeam-channel = "0.5.13"
crossterm = "0.29.0"
dashmap = "6.1.0"
digest = "0.10.7"
fastcdc = "1.0"
md-5 = "0.10.6"
memmap2 = "0.9.5"
ratatui = "0.29.0"
sha1 = "0.10.6"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.20.0"
hex = "0.4.3"
